fix galery wrong anme word wrap

--- a/src/styles/pages/_galery.scss
+++ b/src/styles/pages/_galery.scss
@@ -124,6 +124,14 @@
 //   object-fit: cover;
 // }
 
+
 .feature-name {
   white-space: nowrap;
+}
+
+@media only screen and (max-width: 480px) {
+  .feature-name {
+    white-space: normal;
+    word-break: auto-phrase;
+  }
 }
